--- a/style.css
+++ b/style.css
@@ -4,6 +4,25 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+.myForm h3, label {
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.myForm h3 {
+    grid-column: 1 / 4;
+}
+
+label {
+    justify-self: self-start;
+    grid-column: 1 / 4;
+}
+
 .book-container {
     display: flex;
     align-items: center;
@@ -12,13 +31,52 @@
 
 }
 
+.myForm button {
+   width: 150px;
+   height: 70px;
+   font-size: 26px;
+   border-radius: 10px;
+}
+.wrapper-btn {
+    width: 300px;
+    display: flex;
+    gap: 5px;
+}
+
+.myForm .close {
+    background-color: crimson;
+    color: #fff5f5;
+
+}
+
 button{
     display: block;
     margin: 20px auto;
-    background: crimson;
-    color: white;
+    background: #FF8B45;
+    color: #ffffff;
     bottom: 0;
     padding: 6px 10px;
+    font-weight: 600;
+    border-style: none;
+    cursor: pointer;
+}
+
+input[type=text] {
+    height: 70px;
+    width: 300px;
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    border-style: none;
+    grid-column: 1 / 4;
+    
+}
+input[type=checkbox]{
+    margin-top: 8px;
+    width: 20px;
+    height: 20px;
+    justify-self: flex-end;
 }
 
 .popup-wrapper{
@@ -29,17 +87,29 @@ button{
     width: 100%;
     height: 100%;
     display: none;
+    color: #FF8B45;
+}
 
+::placeholder {
+    color: #FF8B45;
 }
 
 .myForm {
     font-family: arial;
     text-align: center;
     width: 100%;
-    max-width: 300px;
-    margin: 10% auto;
-    padding: 20px;
-    background: yellow;
+    max-width: 400px;
+    height: 100%;
+    max-height: 600px;
+    margin: 5% auto;
+    padding: 40px;
+    background: #d0ebff;
+    border-style: none;
+    border-radius: 10px;
+    display: grid;
+    text-align: center;
+    justify-content: center;
+    grid-template-columns: 150px 75px 35px 35px;
 
 }
 
