--- a/style.css
+++ b/style.css
@@ -4,8 +4,35 @@
     box-sizing: border-box;
 }
 
+
 body {
     font-family: 'Lato', sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    height: 75px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+main {
+    min-height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer {
+    height: 20px;
+    text-align: center;
+    margin-top: auto;
+}
+
+.container {
+    min-height: 100%;
+    position: relative;
 }
 
 .myForm h3, label {
@@ -15,7 +42,7 @@ body {
 }
 
 .myForm h3 {
-    grid-column: 1 / 4;
+    grid-column: 1 / 5;
 }
 
 label {
@@ -24,11 +51,12 @@ label {
 }
 
 .book-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    margin-top: 10px;
+    gap: 20px;
+    width: 95%;
     align-items: center;
-    justify-content: space-around;
-    gap: 50px;
-
 }
 
 .myForm button {
@@ -92,6 +120,7 @@ input[type=checkbox]{
 
 ::placeholder {
     color: #FF8B45;
+    text-align: center;
 }
 
 .myForm {
@@ -113,12 +142,15 @@ input[type=checkbox]{
 
 }
 
-
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 40%;
     border-radius: 5px;
+    text-align: center;
+    height: 220px;
+    margin-bottom: 20px;
+    padding: 10px;
+    line-height: 2  ;
 }
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
