Add style and add book function

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ input[type=text] {
     border-radius: 10px;
     border-style: none;
     grid-column: 1 / 4;
+    padding: 10px;;
     
 }
 input[type=checkbox]{
