--- a/style.css
+++ b/style.css
@@ -4,36 +4,85 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: "Lato", sans-serif;
-  display: flex;
-  flex-direction: column;
+html {
+  font-size: 62.5%;
 }
+
+body {
+  margin: 3.2rem auto;
+  padding: 0 3.2rem;
+  font-family: "Space Mono", monospace, sans-serif;
+  background-image: url("Book Pics\\janko-ferlic-sfL_QOnmy00-unsplash.jpg");
+  background-size: cover;
+  color: #fff;
+}
+h1 {
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+
+/* HEADER */
 
 header {
-  height: 90px;
   text-align: center;
+
+  max-width: 100%;
+  margin-bottom: 7rem;
 }
 
+header h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 6.4rem;
+  color: #fff;
+}
+
+.book-icon {
+  stroke: #ff8b45;
+  margin-right: 1rem;
+  margin-bottom: 0.7rem;
+  font-size: 2rem;
+}
+
+/* MAIN */
+
 main {
-  min-height: 85vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 50px;
+  justify-content: center;
+  max-width: 150rem;
 }
 
-footer {
-  height: 20px;
+button {
+  display: block;
+  margin: 20px auto;
+  background: #ff8b45;
+  color: #ffffff;
+  bottom: 0;
+  padding: 6px 10px;
+  font-weight: 600;
+  border-style: none;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.add-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  height: 56px;
+  width: 184px;
+  font-size: 26px;
   text-align: center;
-  margin-top: auto;
+  border-radius: 50px;
 }
-
-.container {
-  min-height: 100%;
-  position: relative;
-  background-image: url("Book Pics\\janko-ferlic-sfL_QOnmy00-unsplash.jpg");
-  background-size: cover;
+.add-btn:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  background-color: #e67d3e;
+  color: #000000;
 }
 
 .myForm h3,
@@ -52,15 +101,6 @@ label {
   grid-column: 1 / 4;
 }
 
-.book-container {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  margin-top: 10px;
-  gap: 40px;
-  width: 95%;
-  align-items: center;
-}
-
 .myForm button {
   width: 150px;
   height: 70px;
@@ -76,18 +116,6 @@ label {
 .myForm .close {
   background-color: crimson;
   color: #fff5f5;
-}
-
-button {
-  display: block;
-  margin: 20px auto;
-  background: #ff8b45;
-  color: #ffffff;
-  bottom: 0;
-  padding: 6px 10px;
-  font-weight: 600;
-  border-style: none;
-  cursor: pointer;
 }
 
 input[type="text"] {
@@ -142,62 +170,80 @@ input[type="checkbox"] {
   grid-template-columns: 150px 75px 35px 35px;
 }
 
-.card {
-  box-shadow: inset 9px 0px 7px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 5px;
-  text-align: center;
-  height: 300px;
-  margin-bottom: 20px;
-  padding: 10px;
-  line-height: 2;
-  background-image: linear-gradient(#fff, #99e9f2 40%, #fff);
-  color: #5c2300;
-  position: relative;
-  padding-top: 50px;
-  /* border-radius: 5% 2% 2% 5%; */
+.book-container {
+  display: grid;
+  grid-template-columns: repeat(5, 20rem);
+  margin-top: 3rem;
+  justify-content: space-around;
+  /* gap: 6rem; */
+  width: 100%;
+  gap: 5rem 0;
 }
 
-.card h1,
-h3 {
-  /* border-bottom: 1px solid; */
-  line-height: 40px;
+.card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: inset 9px 0px 7px 0 rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(#804623, #ff8b45, #ffa26a);
+  border-radius: 5px;
+  text-align: center;
+  height: 30rem;
+  margin-bottom: 2rem;
+  padding: 1rem;
+  line-height: 1;
+  color: #000;
+  position: relative;
+  padding-top: 3rem;
+  border-radius: 6% 1% 1% 6%;
+  border: 2px solid #60351a;
+}
+.card h1 {
+  background: -webkit-linear-gradient(#000, #fff);
+  -webkit-background-clip: text;
+  font-weight: 700;
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+  font-size: 2.2rem;
+  line-height: 1.2;
+}
+
+.card h3 {
+  font-size: 1.5rem;
+  line-height: 1.5;
+  text-align: center;
 }
 
 .card:hover {
   transform: scale(1.1);
 }
 
-.add-btn {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  height: 56px;
-  width: 184px;
-  font-size: 26px;
+.read-btn {
+  width: 8rem;
+  height: 4rem;
+  transform: translate(60%, -10%);
   text-align: center;
-  border-radius: 50px;
-}
-.add-btn:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  background-color: #d0ebff;
-  color: #5c2300;
+  border-radius: 5px;
+  position: absolute;
+  background-color: #f76707;
 }
 
-.read-btn {
-  width: 80px;
-  height: 40px;
-  text-align: center;
-  margin-top: 30px;
-  border-radius: 5px;
+.read-btn:hover {
+  background-color: #d9480f;
 }
 
 .unread-btn {
-  width: 80px;
-  height: 40px;
+  width: 8rem;
+  height: 4rem;
+  transform: translate(60%, -10%);
   text-align: center;
-  margin-top: 30px;
   border-radius: 5px;
-  background-color: crimson;
+  background-color: #f03e3e;
   color: #d0ebff;
+  position: absolute;
+}
+
+.unread-btn:hover {
+  background-color: crimson;
 }
 
 .remove-btn {
@@ -212,21 +258,59 @@ h3 {
   border-radius: 5px;
 }
 
-.book-icon {
-  height: 70px;
-  width: 70px;
-  /* display: inline; */
-  position: absolute;
-  stroke: #ff8b45;
-  left: 33%;
-  top: 1.7%;
+.remove-btn:hover {
+  background-color: red;
 }
-header h1 {
-  /* background-color: #d0ebff; */
-  padding-top: 10px;
-  padding-bottom: 10px;
-  font-weight: 700;
-  font-style: oblique;
-  font-size: 64px;
-  color: #fff;
+
+/* FOOTER */
+footer {
+  height: 3.2rem;
+  font-size: 2.4rem;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 75em) {
+  .book-container {
+    display: grid;
+    grid-template-columns: repeat(4, 20rem);
+    margin-top: 3rem;
+    justify-content: space-around;
+    width: 100%;
+  }
+}
+
+@media (max-width: 58em) {
+  .book-container {
+    display: grid;
+    grid-template-columns: repeat(3, 20rem);
+    margin-top: 3rem;
+    justify-content: space-around;
+    width: 100%;
+  }
+}
+
+@media (max-width: 46em) {
+  .book-container {
+    display: grid;
+    grid-template-columns: repeat(2, 20rem);
+    margin-top: 3rem;
+    justify-content: space-around;
+    width: 100%;
+  }
+}
+
+@media (max-width: 31em) {
+  body {
+    background-size: cover;
+  }
+  .book-container {
+    display: grid;
+    grid-template-columns: repeat(1, 20rem);
+    margin-top: 3rem;
+    justify-content: space-around;
+    width: 100%;
+  }
 }
